--- a/css/styles.css
+++ b/css/styles.css
@@ -109,10 +109,25 @@ main{
 	padding: 2%;
 }
 
-#cedarPoint img{
-	width: 95%;
-	border-radius: 25px;
+.frame{
+	position: relative;
+	max-width: 450px;
+	margin: 2% auto;
 }
+
+.pic-text{
+	position: absolute;
+	bottom: 0;
+	background: rgba(0, 0, 0, .5);
+	color: #fff;
+	width: 100%;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	text-align: center;
+	font-family: "Playwrite DE Grund", Georgia, Verdana, serif;
+	font-size: 1.5em;
+}
+
 
 #hobbies{
 	width: 45%;
@@ -124,7 +139,7 @@ main{
 	padding: 1%;
 }
 
-#projects h2{
+h2{
 	text-align: center;
 }
 
@@ -158,4 +173,36 @@ footer{
 footer p a{
 	color: #fff;
 	text-decoration: none;
+}
+
+/*Media Query for tablet viewport*/
+@media screen and (min-width:630px), print{
+	.mobile{
+		display: none;
+	}
+
+	.tablet-desktop{
+		display: block;
+	}
+
+	header{
+		position: static;
+		padding-bottom: 2%; 
+	}
+
+	nav li a:hover{
+		color: #000;
+		background-color: #2727f2
+	}
+}
+
+/*Media Query for desktop viewport*/
+@media screen and (min-width: 1921px) {
+	.mobile{
+		display: none;
+	}
+
+	.tablet-desktop{
+		display: block;
+	}
 }
