--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,8 @@ body, header, nav, main, footer, img, h1, h2, h3, section, article, aside {
 
 /*Body and image rules*/
 body{
-	background-color: #5e41f0;
+	background: rgb(2,0,36);
+	background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(88,9,121,1) 34%, rgba(34,43,175,1) 65%, rgba(6,111,194,1) 100%);
 }
 
 img{
@@ -24,52 +25,43 @@ img{
 /*Header rules*/
 header{
 	padding-top: 1%;
-	padding-bottom: 1%;
 	position: -webkit-sticky;
 	position: sticky;
 	top: 0;
 	color: white;
-	background-color: #5e41f0;
 	text-align: center;
 }
 
-/*Nav styles*/
-nav{
-	background-color: #25118c;
-	margin-bottom: 1%;
+*{
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
 }
 
-nav ul{
-	list-style-type: none;
+/*Style rules for hamburger menu*/
+.mobile-nav a{
+	color: #fff;
+	font-family: 'Francois One', sans-serif;
 	text-align: center;
-}
-
-nav li{
-	display: inline-block;
 	font-size: 2em;
-	font-family: "Playwrite DE Grund", Courier, Arial, sans-serif;
-	font-weight: bold;
-}
-
-nav li:first-child{
-	border-top: none;
-}
-
-nav li a{
-	display: block;
-	color: #ffffff;
-	padding-top: .5em;
-	padding-bottom: .5em;
-	padding-left: 2em;
-	padding-right: 2em;
 	text-decoration: none;
-}
-
-/* Show mobible class, hide tablet-desktop class*/
-.mobile{
+	padding: 3%;
 	display: block;
 }
-.tablet-desktop{
+
+.mobile-nav a.menu-icon{
+	display: block;
+	position: absolute;
+	right: 0;
+	top: 0;
+}
+
+/* Show mobile class, hide tablet-desktop class and menu-links id */
+.mobile{
+	display:block;
+}
+
+.tablet-desktop, #menu-links, .tablet-desktop-nav{
 	display: none;
 }
 
@@ -127,6 +119,8 @@ main{
 	text-align: left;
 }
 
+
+
 #projects{
 	padding: 1%;
 }
@@ -155,13 +149,43 @@ h2{
 	padding: 1% 2%;
 }
 
+#skiing ol{
+	padding-left: 5%;
+}
+
+/*Styles for favorite page*/
+.movie{
+	width: 30%;
+	float: left;
+	margin: 0;
+	padding-left: 20%;
+}
+
+.movie h3{
+	text-align: center;
+	padding: .5em;
+}
+
+.video-game{
+	width: 40%;
+	margin: 0;
+	float: right;
+	padding: 3%;
+}
+
+.video-game h3{
+	padding: .5em;
+	text-align: center;
+}
+
 /*Footer styles*/
 footer{
 	clear: both;
 	display: block;
-	background-color: #25118c;
+	border: 1px solid black;
 	font-size: .75em;
 	text-align: center;
+	background: radial-gradient(#700ec1, #5a4fd0);
 	color: #fff;
 	padding: 1%;
 }
@@ -174,7 +198,7 @@ footer p a{
 
 /*Media Query for tablet viewport*/
 @media screen and (min-width:630px), print{
-	.mobile{
+	.mobile, .mobile-nav{
 		display: none;
 	}
 
@@ -182,15 +206,106 @@ footer p a{
 		display: block;
 	}
 
+	.tablet-desktop-nav{
+		display: inline-block;
+	}
+
 	header{
 		position: static;
 		padding-bottom: 2%; 
 	}
 
-	nav li a:hover{
-		color: #000;
-		background-color: #2727f2
-	}
+	/*Style Rules for Nav*/ 
+	nav {
+		background-color: rgba(208, 119, 199, 0.462);
+		position: relative;
+		left: 50%;
+		transform: translateX(-50%);
+		display: inline-block;
+		border: 2px solid #EBECF1;
+		border-radius: 30px;
+		animation: slide-in 1s ease-out;
+	  }
+	  
+	  ul {
+		position: relative;
+		display: flex;
+		flex: 1 1 auto;
+		margin: 0;
+		padding: 0 30px;
+		list-style-type: none;
+		li:not(:last-child) {
+		  margin-right: 40px;
+		}
+		li {
+		  border: 2px solid transparent;
+		  border-radius: 5px;
+		  padding: 10px;
+		  transition: background 0.2s;
+		  a {
+			color: #ffffff;
+			text-decoration: none;
+			text-transform: uppercase;
+			transition: color 0.2s;
+		  }
+		  ul {
+			visibility: hidden;
+			opacity: 0;
+			position: absolute;
+			display: block;
+			margin: 12px -12px;
+			padding: 0;
+			background: #FFA91B;
+			border: 2px solid #F7C833;
+			border-right: 2px solid #F89329;
+			border-bottom: 2px solid #F89329;
+			border-radius: 5px;
+			transition: opacity 0.2s, visibility 0.2s;
+			li {
+			  margin: -2px 0 0 -2px;
+			  width: calc(100% - 20px);
+			  line-height: 1.7;
+			  a {
+				color: #2375D8;
+			  }
+			}
+		  }
+		  &:hover {
+			background: #1a60aa;
+			border: 2px solid #1a60aa;
+			border-right: 2px solid #074a91;
+			border-bottom: 2px solid #074a91;
+			a {
+			  color: #F9F8FD;
+			}
+			ul {
+			  visibility: visible;
+			  opacity: 1;
+			  box-shadow: 0px 3px 5px 2px #EBECF1;
+			  li {
+				a {
+				  color: #F9F8FD;
+				}
+			  }
+			}
+		  }
+		}
+	  }
+	  
+	  @keyframes slide-in {
+		0% {
+		  top: -50px;
+		}
+		40% {
+		  top: 20px;
+		}
+		70% {
+		  top: 10px;
+		}
+		100% {
+		  top: 15px;
+		}
+	  }
 
 	#cedarPoint{
 		width: 40%;
@@ -204,6 +319,21 @@ footer p a{
 		padding: 2%;
 	}
 
+	#hobbies table, #hobbies tr, #hobbies th, #hobbies td{ /*Positions the border*/
+		border-collapse: collapse;
+		padding: 2%;
+		margin-top: 2%;
+	}
+	
+	#hobbies th, #hobbies td{ /*Adds a border between the rows*/
+		border: 1px solid #71881b;
+		text-align: center;
+	}
+	
+	#hobbies td{ /*Centers the text*/
+		text-align: center;
+	}
+
 	#contact iframe{
 		margin: auto;
 		width: 30%;
@@ -214,6 +344,65 @@ footer p a{
 		height: 200px;
 		width: auto;
 		margin: auto;
+	}
+
+	.tbl{
+		padding-bottom: 2%;
+	}
+
+	#projects caption{
+		color: white;
+		font-weight: bold;
+		font-size: 2.5em;
+		padding: 1%;
+	}
+	
+	#projects{
+		background-color: rgb(16, 0, 193);
+		width: 90%;
+		top: 0;
+		bottom: 0;
+		margin-left: auto;
+		margin-right: auto;
+		border: 5px solid #044e64;
+		box-shadow: 10px 10px 10px #022b53;
+	}
+	
+	#projects, #projects tr, #projects th, #projects td{ /*Positions the border*/
+		border-collapse: collapse;
+		padding: 2%;
+		margin-top: 2%;
+	}
+	
+	#projects table, #projects tr, #projects th, #projects td{ /*Positions the border*/
+		border-collapse: collapse;
+		padding: 2%;
+		margin-top: 2%;
+	}
+	
+	#projects td{ /*Adds a border between the rows*/
+		border: 1px solid #0255a2;
+	}
+
+	#projects td a{
+		font-weight: normal;
+		color: white;
+		text-align: center;
+	}
+
+	#projects td:hover{
+		background-color: #9344e1;
+	}
+	
+	#projects tr:nth-child(odd){ /*Changes the color for every other row*/
+		background-color: #277715;
+	}
+	
+	#projects th{
+		border: 1px solid white;
+		background-color: #03552f;
+		color: white;
+		font-size: .75em;
 	}
 }
 
